# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff.yml
gendiff/: __init__.py  cli.py  compare.py  gendiff.py  parser.py  parsing.py  stylish.py
gendiff/formarters/: json_form.py  plain.py  stylish.py
gendiff/formatters/: formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
package_gendiff/: __init.py__  gendiff.py  parsing.py
package_gendiff/formarters/: __init.py__  plain.py  stylish.py
package_gendiff/scripts/: gendiff.py
tests/: files_test.py  json_files_test.py  test_diff.py  yaml_files_test.py
tests/fixtures/: test_result  test_result copy  test_result.json
