[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["Selezneva Marina <petrukhina.marina2011@yandex.ru>"]
packages = [
  { include = "package_gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "package_gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
